[package]
name = "ecs-util"
version = "0.1.0"
authors = ["RJ Garcia <rj@stadiumgoods.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.43.0"
rusoto_ecs = "0.43.0"
rusoto_ec2 = "0.43.0"
tokio = "0.2.18"
